fix: updated scrollbar

--- a/assets/fonts/css/main.css
+++ b/assets/fonts/css/main.css
@@ -163,3 +163,23 @@ a, a:hover{
 .navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
   color: #fff;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #0c0d24; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #c540c5; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #b339b3; 
+}
